--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,4 +4,5 @@ ul{
 li{
     width: max-content;
     height: max-content;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
